--- a/Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex
+++ b/Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex
@@ -117,7 +117,7 @@ Things to know well:
 \end{itemize}
 
 \hypertarget{common-tricks}{%
-\subsubsection{Common Tricks}\label{common-tricks}}
+\subsection{Common Tricks}\label{common-tricks}}
 
 \begin{itemize}
 \tightlist
@@ -137,14 +137,13 @@ following:
   etc.
 \item
   Show that \(f\) is entire and bounded.
-\end{itemize}
 
-If you additionally want to show \(f\) is zero, try one of these:
-
-\begin{itemize}
-\tightlist
-\item
-  Show \(f\) is entire, bounded, and \(\lim_{z\to\infty} f(z) = 0\).
+  \begin{itemize}
+  \tightlist
+  \item
+    If you additionally want to show \(f\) is zero, show
+    \(\lim_{z\to\infty} f(z) = 0\).
+  \end{itemize}
 \end{itemize}
 
 \end{remark}
@@ -166,11 +165,21 @@ If you additionally want to show \(f\) is zero, try one of these:
 \item
   \(\operatorname{Arg}(z/w) = \operatorname{Arg}(z) - \operatorname{Arg}(w)\).
 \item
-  Exponential forms of cosine and sine:
+  Exponential forms of cosine and sine, where it's sometimes useful to
+  set \(w\coloneqq e^{iz}\):
   \begin{align*}
-  \cos(\theta) = \frac 1 2 \qty{e^{i\theta} + e^{-i\theta}} && &&
-  \sin(\theta) = \frac{1}{2i}\qty{e^{i\theta} - e^{-i\theta}}
+  \cos(z) 
+  &= \frac 1 2 \qty{e^{iz} + e^{-iz}} = {1\over 2}(w+ w^{-1})\\
+  \sin(z) 
+  &= \frac{1}{2i}\qty{e^{iz} - e^{-iz}} = {1\over 2i}(w-w^{-1})
+  \\ \\
+  \cosh(z) = \cos(iz) 
+  &= {1\over 2}\qty{e^z + e^{-z}} \\
+  \sinh(z) = \sin(iz) 
+  &= {1\over 2}\qty{e^z - e^{-z}} 
   .\end{align*}
+\item
+  Setting \(w=e^z\) is useful:
 \item
   Various differentials:
   \begin{align*}
@@ -194,8 +203,10 @@ If you additionally want to show \(f\) is zero, try one of these:
 \begin{fact}[Generalized Binomial Theorem]
 
 Define \((n)_k\) to be the falling factorial
-\(\prod_{j=0}^{k-1} (n-k) = n(n-1)\cdots(n-k+1)\) and set
-\({n\choose k} \coloneqq(n)_k/k!\), then
+\begin{align*}
+\prod_{j=0}^{k-1} (n-k) = n(n-1)\cdots(n-k+1)
+\end{align*}
+and set \({n\choose k} \coloneqq(n)_k/k!\), then
 \begin{align*}
 (x+y)^n = \sum_{k\geq 0} {n\choose k} x^{k}y^{n-k}
 .\end{align*}
@@ -208,10 +219,13 @@ Define \((n)_k\) to be the falling factorial
 \sum_{k=1}^{n} k &=\frac{n(n+1)}{2} \\
 \sum_{k=1}^{n} k^{2} &=\frac{n(n+1)(2 n+1)}{6} \\
 \sum_{k=1}^{n} k^{3} &=\frac{n^{2}(n+1)^{2}}{4}  \\
-\log(1-x) &= \sum_{n \geq 0} {x^n\over n} && x\in (-1, 1)\\
-{\frac{\partial }{\partial z}\,} \sum_{j=0}^\infty a_j z^j &= \sum_{j=0}^\infty a_{j+1}z^j
-\sqrt{1+x} = (1+x)^{1/2} &= 1 + (1/2)x + {(1/2)(-1/2) \over 2!}x^2 + {(1/2)(-1/2)(-3/2) \over 3!}x^3 + \cdots \\
-&= 1 + {1\over 2} x - {1\over 8}x^2 + {1\over 16}x^3 - \cdots
+\log(1-x) 
+  &= \sum_{n \geq 0} {x^n\over n} && x\in (-1, 1)\\
+{\frac{\partial }{\partial z}\,} \sum_{j=0}^\infty a_j z^j 
+  &= \sum_{j=0}^\infty a_{j+1}z^j \\
+\sqrt{1+x} 
+  &= (1+x)^{1/2} &= 1 + (1/2)x + {(1/2)(-1/2) \over 2!}x^2 + {(1/2)(-1/2)(-3/2) \over 3!}x^3 + \cdots \\
+  &= 1 + {1\over 2} x - {1\over 8}x^2 + {1\over 16}x^3 - \cdots
 \end{align*}
 
 \end{fact}
@@ -273,6 +287,23 @@ A continuous function on a compact set is uniformly continuous.
 
 \end{remark}
 
+\begin{definition}[Univalent functions]
+
+A function \(f\in \mathop{\mathrm{Hol}}(U; {\mathbb{C}})\) is called
+\textbf{univalent} if \(f\) is injective.
+
+\end{definition}
+
+\begin{remark}
+
+If \(f: \Omega \to \Omega'\) is a univalent surjection, \(f\) is
+invertible on \(\Omega\) and \(f^{-1}\) is holomorphic. Compare to real
+functions: \(f(x) = x^3\) is injective on \((-c, c)\) for any \(c\) but
+\(f'(0) = 0\) and \(f^{-1}(x) \coloneqq x^{1/3}\) is not differentiable
+at zero.
+
+\end{remark}
+
 \hypertarget{theorems}{%
 \subsection{Theorems}\label{theorems}}
 
@@ -281,6 +312,25 @@ A continuous function on a compact set is uniformly continuous.
 \end{theorem}
 
 \begin{theorem}[Inverse Function Theorem]
+
+For \(f \in C^1({\mathbb{R}}; {\mathbb{R}})\) with \(f'(a) \neq 0\),
+then \(f\) is invertible in a neighborhood \(U \ni a\),
+\(g\coloneqq f^{-1}\in C^1(U; {\mathbb{R}})\), and at
+\(b\coloneqq f(a)\) the derivative of \(g\) is given by
+\begin{align*}
+g'(b) = {1 \over f'(a)}
+.\end{align*}
+For \(F \in C^1({\mathbb{R}}^n, {\mathbb{R}}^n)\) with \(D_f\)
+invertible in a neighborhood of \(a\), so \(\det(J_f)\neq 0\), then
+setting \(b\coloneqq F(a)\),
+\begin{align*}
+J_{F^{-1}}(q) = \qty{J_F(p)}^{-1}
+.\end{align*}
+
+The version for holomorphic functions: if
+\(f\in \mathop{\mathrm{Hol}}({\mathbb{C}}; {\mathbb{C}})\) with
+\(f'(p)\neq 0\) then there is a neighborhood \(V\ni p\) with that
+\(f\in \mathop{\mathrm{BiHol}}(V, f(V))\).
 
 \end{theorem}
 
@@ -340,7 +390,7 @@ with integrating or differentiating.
 
 \end{remark}
 
-\begin{fact}
+\begin{proposition}[Ratio Test]
 
 Consider \(\sum c_k z^k\), set
 \(R = \lim {\left\lvert {c_{k+1} \over c_k} \right\rvert}\), and recall
@@ -356,7 +406,17 @@ the \textbf{ratio test}:
   \(R=1\) yields no information.
 \end{itemize}
 
-\end{fact}
+\end{proposition}
+
+\begin{proposition}[Root Test]
+
+\begin{figure}
+\centering
+\includegraphics{figures/image_2021-05-27-15-40-58.png}
+\caption{image\_2021-05-27-15-40-58}
+\end{figure}
+
+\end{proposition}
 
 \begin{proposition}[Radius of Convergence by the Root Test]
 
@@ -430,6 +490,13 @@ Find the radius of convergences for the power series expansion of
 \hypertarget{preliminaries}{%
 \section{Preliminaries}\label{preliminaries}}
 
+\begin{definition}[Toy contour]
+
+A closed Jordan curve that separates \({\mathbb{C}}\) into an exterior
+and interior region is referred to as a \textbf{toy contour}.
+
+\end{definition}
+
 \hypertarget{complex-arithmetic}{%
 \subsection{Complex Arithmetic}\label{complex-arithmetic}}
 
@@ -458,13 +525,43 @@ taking (say) a principal branch of \(\log\) given by
 
 \end{fact}
 
+\begin{fact}
+
+Some computations that come up frequently:
+\begin{align*}
+{\left\lvert {z \pm w} \right\rvert}^2 &= {\left\lvert {z} \right\rvert}^2 + {\left\lvert {w} \right\rvert}^z + 2\Re(\mkern 1.5mu\overline{\mkern-1.5muw\mkern-1.5mu}\mkern 1.5muz) \\
+(a+bi)(c+di) = (ac - bd) + (ad + bc)
+.\end{align*}
+
+\end{fact}
+
+\begin{fact}
+
+Some useful facts:
+\begin{align*}
+{\left\lvert {e^{z}} \right\rvert} = e^{\Re(z)}
+.\end{align*}
+
+On \(S^1\),
+\begin{align*}
+1/z &= e^{-i\theta} \\
+\cos (\theta)=\frac{\mathrm{e}^{i \theta}+\mathrm{e}^{-i \theta}}{2}=\frac{z+1 / z}{2} \\
+\sin (\theta)=\frac{\mathrm{e}^{i \theta}-\mathrm{e}^{-i \theta}}{2 i}=\frac{z-1 / z}{2 i} 
+.\end{align*}
+
+\end{fact}
+
 \hypertarget{complex-log}{%
 \subsection{Complex Log}\label{complex-log}}
 
 \begin{fact}[Complex Log]
 
 For \(z= r e^{i\theta}\neq 0\), \(\theta\) is of the form
-\(\Theta + 2k\pi\) where \(\Theta = \operatorname{Arg}z\)
+\(\Theta + 2k\pi\) where \(\Theta = \operatorname{Arg}z\) We define
+\begin{align*}
+\log(z) = \ln\qty{{\left\lvert {z} \right\rvert}} + i\operatorname{Arg}(z)
+\end{align*}
+and \(z^c \coloneqq e^{c\log(z)}\).
 
 \end{fact}
 
@@ -1147,12 +1244,6 @@ Behold:
 .\end{align*}
 
 \end{proof}
-
-\begin{figure}
-\centering
-\includegraphics{figures/image_2021-05-27-15-40-58.png}
-\caption{image\_2021-05-27-15-40-58}
-\end{figure}
 
 \begin{proposition}[?]
 
@@ -1898,41 +1989,39 @@ point.
 \hypertarget{residues}{%
 \section{Residues}\label{residues}}
 
-\begin{proposition}[Length bound]
+\hypertarget{basics}{%
+\subsection{Basics}\label{basics}}
 
-\begin{align*}
-{\left\lvert { \int_\gamma f} \right\rvert} \leq \sup_{z\in \gamma} {\left\lvert {f} \right\rvert} \cdot \mathrm{length}(\gamma)
-.\end{align*}
-This follows from
-\begin{align*}
-\left|\int_{\gamma} f(z) d z\right| \leq \sup _{t \in[a, b]}|f(z(t))| \int_{a}^{b}\left|z^{\prime}(t)\right| d t \leq \sup _{z \in \gamma}|f(z)| \cdot \operatorname{length}(\gamma)
-.\end{align*}
+\begin{remark}
 
-\end{proposition}
+Check: do you need residues at all?? You may be able to just compute an
+integral!
 
-\begin{proposition}[Jordan's Lemma]
+\begin{itemize}
+\item
+  Directly by parameterization:
+  \begin{align*}
+  \int_\gamma f \,dz= \int_a^b f(z(t))\, z'(t) \,dt&& \text{for } z(t) \text{ a parameterization of } \gamma
+  ,\end{align*}
+\item
+  Finding a primitive \(F\), then
+  \begin{align*}
+  \int_\gamma f = F(b) - F(a)
+  .\end{align*}
 
-\todo[inline]{todo}
+  \begin{itemize}
+  \tightlist
+  \item
+    Note: you can parameterize a circle around \(z_0\) using
+    \begin{align*}
+    z= z_0 + re^{i \theta }
+    .\end{align*}
+  \end{itemize}
+\end{itemize}
 
-\end{proposition}
+\end{remark}
 
-\begin{fact}
-
-Some useful facts:
-\begin{align*}
-{\left\lvert {e^{z}} \right\rvert} = e^{\Re(z)}
-.\end{align*}
-
-On \(S^1\),
-\begin{align*}
-1/z = e^{-i\theta} \\
-\cos (\theta)=\frac{\mathrm{e}^{i \theta}+\mathrm{e}^{-i \theta}}{2}=\frac{z+1 / z}{2} \\
-\sin (\theta)=\frac{\mathrm{e}^{i \theta}-\mathrm{e}^{-i \theta}}{2 i}=\frac{z-1 / z}{2 i} 
-.\end{align*}
-
-\end{fact}
-
-\begin{fact}
+\begin{fact}[Integrating $z^k$ around $S^1$ powers residues]
 
 The major fact that reduces integrals to residues:
 \begin{align*}
@@ -1953,45 +2042,106 @@ series expansion.
 
 \end{fact}
 
-\begin{remark}
+\begin{example}[?]
 
-Check: do you need residues at all?? You may be able to just compute an
-integral!
-
-\begin{itemize}
-\item
-  Directly by parameterization:
-  \begin{align*}
-  \int_\gamma f = \int_a^b f(z(t))\, z'(t) && \text{for } z(t) \text{ a parameterization of } \gamma
-  ,\end{align*}
-\item
-  Finding a primitive \(F\),
-\item
-  Writing \(z= z_0 + re^{i \theta }\)
-\end{itemize}
-
-\end{remark}
-
-\hypertarget{computing-residues}{%
-\subsection{Computing Residues}\label{computing-residues}}
-
-\begin{definition}[Toy contour]
-
-A closed Jordan curve that separates \({\mathbb{C}}\) into an exterior
-and interior region is referred to as a \textbf{toy contour}.
-
-\end{definition}
-
-\begin{definition}[Winding Number]
-
-For \(\gamma \subseteq \Omega\) a closed curve not passing through a
-point \(z_0\), the \textbf{winding number of \(\gamma\) about \(z_0\)}
-is defined as
+Consider
 \begin{align*}
-n_\gamma(z_0) \coloneqq{1\over 2\pi i} \int_\gamma {1\over \xi -z_0}\,d\xi
+f(z) \coloneqq{e^{iz} \over 1 + z^2}
+\end{align*}
+where \(z\neq \pm i\), and attempt to integrate
+\begin{align*}
+\int_{\mathbb{R}}f(z) \,dz
+.\end{align*}
+Use a semicircular contour \(\gamma_R\) where \(z = Re^{it}\) and check
+\begin{align*}
+\sup_{z\in \gamma_R} {\left\lvert {f(z)} \right\rvert} 
+= \max_{t\in [0, \pi} {1 \over 1 + (Re^{it})^2 } \\
+= \max_{t\in [0, \pi} {1 \over 1 + R^2e^{2it} } \\
+&= {1\over R^2 - 1}
 .\end{align*}
 
-\end{definition}
+\end{example}
+
+\hypertarget{estimates}{%
+\subsection{Estimates}\label{estimates}}
+
+\begin{proposition}[Length bound / ML Estimate]
+
+\begin{align*}
+{\left\lvert { \int_\gamma f} \right\rvert} \leq ML \coloneqq\sup_{z\in \gamma} {\left\lvert {f} \right\rvert} \cdot \mathrm{length}(\gamma)
+.\end{align*}
+
+\end{proposition}
+
+\begin{proof}[?]
+
+\begin{align*}
+\left|\int_{\gamma} f(z) d z\right| \leq \sup _{t \in[a, b]}|f(z(t))| \int_{a}^{b}\left|z^{\prime}(t)\right| d t \leq \sup _{z \in \gamma}|f(z)| \cdot \operatorname{length}(\gamma)
+.\end{align*}
+
+\end{proof}
+
+\begin{proposition}[Jordan's Lemma]
+
+Suppose that \(f(z) = e^{iaz}g(z)\) for some \(g\), and let
+\(C_R \coloneqq\left\{{ z=Re^{it} {~\mathrel{\Big|}~}t\in [0, \pi] }\right\}\).
+Then
+\begin{align*}
+{\left\lvert {\int_{C_R} f(z) \,dz} \right\rvert} \leq {\pi M_R \over a}
+\end{align*}
+where
+\(M_R \coloneqq\sup_{t\in [0, \pi]} {\left\lvert {g(Re^{it})} \right\rvert}\).
+
+\end{proposition}
+
+\begin{proof}[?]
+
+\begin{align*}
+{\left\lvert { \int_{C_R} f(z)\,dz} \right\rvert}
+&= {\left\lvert { \int_{C_R} e^{iaz}g(z) \,dz} \right\rvert} \\
+&= {\left\lvert { \int_{[0, \pi]} e^{ia\qty{Re^{it}}}g(Re^{it}) iRe^{it} \,dt} \right\rvert} \\
+&\leq \int_{[0, \pi]} {\left\lvert { e^{ia\qty{Re^{it}}}g(Re^{it}) iRe^{it}} \right\rvert} \,dt\\
+&=R \int_{[0, \pi]} {\left\lvert { e^{ia\qty{Re^{it}}}g(Re^{it})} \right\rvert} \,dt\\
+&\leq R M_R \int_{[0, \pi]} {\left\lvert { e^{ia\qty{Re^{it}}}} \right\rvert} \,dt\\
+&= R M_R \int_{[0, \pi]} e^{\Re\qty{iaRe^{it}}}   \,dt\\
+&= R M_R \int_{[0, \pi]} e^{\Re\qty{iaR\qty{\cos(t) + i\sin(t) } }}   \,dt\\
+&= R M_R \int_{[0, \pi]} e^{-aR\sin(t) }   \,dt\\
+&= 2 R M_R \int_{[0, \pi/2]} e^{-aR\sin(t) }   \,dt\\
+&\leq 2R M_R \int_{[0, \pi/2]} e^{-aR\qty{2t\over \pi} }   \,dt\\
+&= 2RM_R \qty{\pi \over 2aR}\qty{1-e^{-aR}} \\
+&= {\pi M_R \over a}
+.\end{align*}
+
+where we've used that on \([0, \pi/2]\), there is an inequality
+\(2t/\pi \leq \sin(t)\). This is obvious from a picture, since
+\(\sin(t)\) is a height on \(S^1\) and \(2t/\pi\) is a height on a
+diagonal line:
+
+\begin{figure}
+\centering
+\includegraphics{figures/image_2021-06-09-01-29-22.png}
+\caption{image\_2021-06-09-01-29-22}
+\end{figure}
+
+\end{proof}
+
+\hypertarget{residue-formulas}{%
+\subsection{Residue Formulas}\label{residue-formulas}}
+
+\begin{theorem}[The Residue Theorem]
+
+Let \(f\) be meromorphic on a region \(\Omega\) with poles
+\(\left\{{ { {z}_1, {z}_2, \cdots, {z}_{N}} }\right\}\). Then for any
+\(\gamma \in \Omega\setminus\left\{{ { {z}_1, {z}_2, \cdots, {z}_{N}} }\right\}\),
+\begin{align*}
+{1 \over 2\pi i } \int_\gamma f(z) \,dz= \sum_{j=1}^N n_\gamma(z_j) \mathop{\mathrm{Res}}_{z=z_j} f
+.\end{align*}
+If \(\gamma\) is a toy contour, then\\
+\begin{align*}
+{1\over 2\pi i}\int_\gamma f\,dz= \sum_{j=1}^N \mathop{\mathrm{Res}}_{z=z_j}f
+.\end{align*}
+
+\end{theorem}
 
 \begin{proposition}[Residue formula for higher order poles]
 
@@ -2013,36 +2163,32 @@ As a special case, if \(z_0\) is a simple pole of \(f\), then
 
 \begin{corollary}[Better derivative formula that sometimes works for simple poles]
 
-If additionally \(f=g/h\) where \(h(z_0) = 0\) and \(h'(z_0)\neq 0\), we
-can apply L'Hopital's rule to compute this residue:
+If additionally \(f=g/h\) where \(h(z_0) = 0\) and \(h'(z_0)\neq 0\),
+\begin{align*}
+\mathop{\mathrm{Res}}_{z=z_0} {g(z) \over h(z)} = {g(z_0) \over h'(z_0)}
+.\end{align*}
+
+\end{corollary}
+
+\begin{proof}[?]
+
+Apply L'Hopital:
 \begin{align*}
 (z-z_0) {g(z) \over h(z)} = {(z-z_0) g(z) \over h(z) } \overset{LH}{=}
 {g(z) + (z-z_0) g'(z) \over h'(z)} \overset{z\to z_0}\longrightarrow{g(z_0) \over h'(z_0)}
 .\end{align*}
 
-\end{corollary}
+\end{proof}
 
 \begin{example}[Residue of a simple pole (order 1)]
 
-Let \(f(z) = \frac{1}{1+z^2}\), then
-\(\mathop{\mathrm{Res}}(i, f) = \frac{1}{2i}\).
+Let \(f(z) = \frac{1}{1+z^2}\), then \(g(z) = 1, h(z) = 1+z^2\), and
+\(h'(z) = 2z\) so that \(h'(i) = 2i \neq 0\). Thus
+\begin{align*}
+\mathop{\mathrm{Res}}_{z=i}{1\over 1+z^2} = \frac{1}{2i}
+.\end{align*}
 
 \end{example}
-
-\begin{theorem}[The Residue Theorem]
-
-Let \(f\) be meromorphic on a region \(\Omega\) with poles
-\(\left\{{ { {z}_1, {z}_2, \cdots, {z}_{N}} }\right\}\). Then for any
-\(\gamma \in \Omega\setminus\left\{{ { {z}_1, {z}_2, \cdots, {z}_{N}} }\right\}\),
-\begin{align*}
-{1 \over 2\pi i } \int_\gamma f(z) \,dz= \sum_{j=1}^N n_\gamma(z_j) \mathop{\mathrm{Res}}_{z=z_j} f
-.\end{align*}
-If \(\gamma\) is a toy contour, then\\
-\begin{align*}
-{1\over 2\pi i}\int_\gamma f\,dz= \sum_{j=1}^N \mathop{\mathrm{Res}}_{z=z_j}f
-.\end{align*}
-
-\end{theorem}
 
 \hypertarget{exercises-3}{%
 \subsubsection{Exercises}\label{exercises-3}}
@@ -2052,13 +2198,13 @@ Some good computations
 \href{https://math.mit.edu/~jorloff/18.04/notes/topic9.pdf}{here}.
 \end{quote}
 
-\begin{problem}[?]
+\begin{exercise}
 
 Show that the complex zeros of \(f(z) \coloneqq\sin(\pi z)\) are exactly
 \({\mathbb{Z}}\), and each is order 1. Calculate the residue of
 \(1/\sin(\pi x)\) at \(z=n\in {\mathbb{Z}}\).
 
-\end{problem}
+\end{exercise}
 
 \includegraphics{figures/image_2021-05-17-13-32-46.png}
 \includegraphics{figures/image_2021-05-17-13-32-57.png}
@@ -2108,8 +2254,142 @@ Show that the complex zeros of \(f(z) \coloneqq\sin(\pi z)\) are exactly
 
 \end{solution}
 
+\begin{exercise}[?]
+
+Use a direct Laurent expansion to show
+\begin{align*}
+\mathop{\mathrm{Res}}_{z=0} {1\over z-\sin(z)} = {3! \over 5\cdot 4}
+.\end{align*}
+
+\begin{quote}
+Note the necessity: one doesn't know the order of the pole at zero, so
+it's unclear how many derivatives to take.
+\end{quote}
+
+\end{exercise}
+
+\begin{solution}
+
+Expand:
+\begin{align*}
+{1\over z - \sin(z)}
+&= z^{-1}\qty{1 - z^{-1}\sin(z) }^{-1}\\
+&= z^{-1}\qty{1 - z^{-1}\qty{ z - {1\over 3!}z^3 + {1\over 5!} z^5 - \cdots}}^{-1}\\
+&= z^{-1}\qty{1 - \qty{ 1 - {1\over 3!}z^2 + {1\over 5!} z^4 - \cdots}}^{-1}\\
+&= z^{-1}\qty{{1\over 3!}z^2 - {1\over 5!}z^4 + \cdots}^{-1}\\
+&= z^{-1}\cdot 3! z^{-2} \qty{1 - {1\over 5!/3!}z^2 + \cdots}^{-1}\\
+&= {3!\over z^3} \qty{1 \over 1 - \qty{ {1\over 5\cdot 4}z^2 + \cdots}} \\
+&= {3!\over z^3}\qty{1 + \qty{{1\over 5\cdot 4}z^2} + \qty{{1\over 5\cdot 4}z^2}^2 + \cdots} \\
+&= 3! z^{-3} + {3!\over 5\cdot 4}z^{-1}+ O(z) \\
+.\end{align*}
+
+\end{solution}
+
+\begin{exercise}[?]
+
+Compute
+\begin{align*}
+\mathop{\mathrm{Res}}_{z=0} {1\over z^2 \sin(z)}
+.\end{align*}
+
+\end{exercise}
+
+\begin{solution}
+
+First expand \((\sin(z))^{-1}\):
+\begin{align*}
+{1\over \sin(z)}
+&= \qty{z - {1\over 3!}z^3 + {1\over 5!}z^5 -\cdots }^{-1}\\
+&= z^{-1}\qty{1 - {1\over 3!}z^2 + {1\over 5!}z^4 - \cdots }^{-1}\\
+&= z^{-1}\qty{1 + 
+\qty{{1\over 3!}z^2 - {1\over 5!} z^4 + \cdots} 
++
+\qty{{1\over 3!}z^2 - \cdots}^2 + \cdots
+} \\
+&= z^{-1}\qty{1 + {1\over 3!}z^2 \pm O(z^4) }
+,\end{align*}
+using that \((1-x)^{-1}= 1 + x + x^2 + \cdots\).
+
+Thus
+\begin{align*}
+z^{-2}\qty{\sin(z)}^{-1}
+&= z^{-2} \cdot
+z^{-1}\qty{1 + {1\over 3!}z^2 \pm O(z^4) } \\
+&= z^{-3} + {1\over 3!}z^{-1}+ O(z)
+.\end{align*}
+
+\end{solution}
+
+\begin{exercise}[Keyhole contour and ML estimate]
+
+Compute
+\begin{align*}
+\int_{[0, \infty]} {\log(x) \over (1+x^2)^2}\,dx
+.\end{align*}
+
+\end{exercise}
+
+\begin{solution}
+
+Factor \((1+z^2)^2 = (z+i^2(z-i)^2\). Take a keyhole contour similar to
+the following:
+
+\begin{figure}
+\centering
+\includegraphics{figures/image_2021-06-09-02-11-59.png}
+\caption{image\_2021-06-09-02-11-59}
+\end{figure}
+
+Show that outer radius \(R\) and inner radius \(\rho\) circles
+contribute zero in the limit by the ML estimate? Compute the residues by
+just applying the formula and manually computing derivatives:
+\begin{align*}
+\mathop{\mathrm{Res}}_{z= \pm i} f(z) 
+&= \lim_{z\to \pm i} {\frac{\partial }{\partial z}\,} {\log^2(z) \over (z\pm i)^2} \\
+&= \lim_{z\to \pm i} {2\log(z) (z\pm i)^2 - 2(z\pm i)^2 \log^2(z) \over \qty{(z\pm i )^2}^2} \\
+&= {
+2\log(\pm i)(\pm 2i)^2 - 2(\pm 2i)^2 \log^2(\pm i)
+\over {\qty{\pm 2i}}^4 } \\
+&=_? {\pi \over 4}\pm {i\pi^2 \over 16}
+.\end{align*}
+
+\begin{quote}
+See p.4: \url{http://www.math.toronto.edu/mnica/complex1.pdf}
+\end{quote}
+
+\end{solution}
+
+\begin{exercise}[Sinc Function]
+
+Show
+\begin{align*}
+\int_{(0, \infty)} {\sin(x) \over x }\,dx= {\pi \over 2}
+.\end{align*}
+
+\end{exercise}
+
+\begin{solution}
+
+Take an indented semicircle. Let \(I\) be the original integral, then
+\begin{align*}
+I = {1\over 2i} \int_{\mathbb{R}}{e^{iz} - 1 \over z } \,dz
+.\end{align*}
+
+\end{solution}
+
 \hypertarget{argument-principle}{%
 \subsection{Argument Principle}\label{argument-principle}}
+
+\begin{definition}[Winding Number]
+
+For \(\gamma \subseteq \Omega\) a closed curve not passing through a
+point \(z_0\), the \textbf{winding number of \(\gamma\) about \(z_0\)}
+is defined as
+\begin{align*}
+n_\gamma(z_0) \coloneqq{1\over 2\pi i} \int_\gamma {1\over \xi -z_0}\,d\xi
+.\end{align*}
+
+\end{definition}
 
 \begin{theorem}[Argument Principle]
 
